# ml-models-collection

./: .cache.sqlite  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  vercel.json  weather_model.pth
src/backend/: .env  server.py
src/backend/models/: weather_prediction.py
src/backend/routers/: weather.py
src/backend/utils/: weather_data.py
src/ml_models_collection.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
